--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <h1>Welcome to Perth</h1>
+    <h2>Capital City of Western Australia</h2>
     <footer>
       This project was coded by Tracy Vonk and is
       <a
