Header added and styled

--- a/index.html
+++ b/index.html
@@ -14,16 +14,23 @@
     <title>Welcome to Perth</title>
   </head>
   <body>
-    <h1>Welcome to Perth</h1>
-    <h2>Capital City of Western Australia</h2>
-    <footer>
-      This project was coded by Tracy Vonk and is
-      <a
-        href="https://github.com/TracyV8/Responsive-add-on-project"
-        target="_blank"
-      >
-        open sourced on GitHub</a
-      >
-    </footer>
+    <div class="container">
+      <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to Perth</h1>
+        <h2>Capital City of Western Australia</h2>
+        <a href="http://">Learn More</a>
+      </header>
+
+      <footer>
+        This project was coded by Tracy Vonk and is
+        <a
+          href="https://github.com/TracyV8/Responsive-add-on-project"
+          target="_blank"
+        >
+          open sourced on GitHub</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
