Added first section of main page and styled plus made responsive

--- a/index.html
+++ b/index.html
@@ -21,9 +21,39 @@
         <h2>Capital City of Western Australia</h2>
         <a href="http://">Learn More</a>
       </header>
+      <main>
+        <section class="grid grid-2-column">
+          <div>
+            <img
+              src="images/Kings-park-gardens.jpg"
+              alt="Kings Parks gardens"
+            />
+          </div>
+          <div>
+            <h3>Why Perth, WA?</h3>
+            <h2>Perth, Australia's sunniest capital! 🌞</h2>
+            <p>
+              Perth is situated on the west bank of the Swan River and was
+              founded in 1829. It grew due to the convicts arrival around the
+              labour shortage, with many of the major buildings built by the
+              convicts. The city boomed during the 1890's gold discovery.
+            </p>
+            <p>
+              Perth is home to the largest inland park in the world! That’s
+              right! Kings Park, which sits proudly beside the Swan River within
+              stones throw of the CBD, is actually the largest inland park IN
+              THE WORLD. It is larger than Central Park in New York, and Hyde
+              Park in London. Now, that’s one of the facts about Perth that most
+              people don’t know! In size, it covers over 400 hectares, and is
+              home to the War Memorial, Tennis Club, a reservoir, and more
+              plants and flowers than you could poke a stick at!
+            </p>
+          </div>
+        </section>
+      </main>
 
       <footer>
-        <section class="grid">
+        <section class="grid grid-footer">
           <div>
             <h3>More about Perth</h3>
             <ul>
