added cards content and CSS

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h3>.TRAVEL.</h3>
         <h1>Welcome to Perth</h1>
         <h2>Capital City of Western Australia</h2>
-        <a href="http://">Learn More</a>
+        <a href="https://perth.wa.gov.au/en" target="_blank">Learn More</a>
       </header>
       <main>
         <section class="grid grid-2-column">
@@ -48,6 +48,136 @@
               home to the War Memorial, Tennis Club, a reservoir, and more
               plants and flowers than you could poke a stick at!
             </p>
+          </div>
+        </section>
+
+        <section class="second">
+          <h3 class="text-center">Places</h3>
+          <h2 class="text-center">My favourite places in Perth are!</h2>
+          <div class="grid grid-3-columns">
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/Rottnest-island.jpeg"
+                  alt="Picture of Rottnest Island"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Rottnest Island/Wadjemup</h4>
+                <p>
+                  Rottnest Island’s tranquil setting will make you feel a world
+                  away. Rotto, as the locals call it, is a protected nature
+                  reserve boasting an abundance of unique flora and fauna,
+                  including spectacular marine life and the island’s most famous
+                  resident – the adorable quokka. Discover rich cultural
+                  heritage, explore white-sand beaches and swim and snorkel in
+                  pristine waters, all in this little pocket of paradise.
+                </p>
+                <h5>Distance from Perth</h5>
+                <p>Located just 19km (12mi) off the coast of Perth</p>
+                <h5>Favourite Place</h5>
+                <p>
+                  The Basin, Geordie Bay and Little Parakeet Bay are favourites
+                  close to Thomson Bay settlement, while those towards West End
+                  have a raw, rugged appeal.
+                </p>
+                <div class="card-footer">
+                  <a
+                    href="https://www.westernaustralia.com/au/places/rottnest-island/56b266c1d5f1565045da9d82"
+                    target="_blank"
+                    class="btn"
+                    >Learn More</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/Swan-valley.jpg"
+                  alt="Picture of Swan Valley"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Swan Valley</h4>
+                <p>
+                  Home to world-class wineries, breweries and distilleries, the
+                  Swan Valley is bursting with music and flavour. Pull up on a
+                  patch of grass under a shady tree or dine at one of the many
+                  stylish venues along the riverside. Add a side dish of art,
+                  historical architecture and the oldest pub in Perth and it is
+                  a day out of rustic sophistication. Recipes and techniques
+                  handed down through generations make each meal, product and
+                  experience, special. Families are welcomed with homely
+                  hospitality by friendly locals. Arrive as a stranger, leave as
+                  a friend. Where there is a river, there is life, and the
+                  fertile plains of the Swan Valley is a symphony for the taste
+                  buds and soul.
+                </p>
+                <h5>Distance from Perth</h5>
+                <p>Located 25 minutes from Perth City</p>
+                <h5>Favourite Place</h5>
+                <p>
+                  Voted the best visitor centre in the country, the Swan Valley
+                  Visitor Centre in Guildford can help visitors get the most out
+                  of their Swan Valley visit. The centre's passionate staff
+                  members know the Swan Valley inside and out and back to front
+                  and can tell visitors all the hidden nooks and crannies, the
+                  award winners, the family friendly places, the romantic spots,
+                  the natural wonders and the many interactive experiences on
+                  offer.
+                </p>
+                <div class="card-footer">
+                  <a
+                    href="https://www.destinationperth.com.au/region/things-do-swan-valley"
+                    target="_blank"
+                    class="btn"
+                    >Learn More</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/Ledge-point.jpg"
+                  alt="Picture of Ledge Point"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Ledge Point</h4>
+                <p>
+                  Ledge Point is known for its excellent waves and surfing
+                  conditions. If you’re not a surfer, no problem! The beaches
+                  are also great for swimming, sunbathing, fishing, and
+                  relaxing. Ledge Point is home to a yearly windsurfing
+                  competition, so be sure to check it out if you’re into that.
+                  Get out on the water with a kayak or stand-up paddleboard.
+                  Ledge Point is a beautiful place to explore from the seaside.
+                  If you have access to a boat or a kayak, you can visit
+                  Lancelin Island, a few minute’s sailing from the beach in
+                  Ledge Point.
+                </p>
+                <h5>Distance from Perth</h5>
+                <p>Ledge Point is located about 90 minutes north of Perth</p>
+                <h5>Favourite Place</h5>
+                <p>
+                  Ledge Point is home to the beautiful Ledge Point Golf Club if
+                  you are into golf. This 18-hole course offers stunning views
+                  and is a great way to spend a day out in nature. After your
+                  round of golf, be sure to stop by the clubhouse for a drink or
+                  bite to eat.
+                </p>
+                <div class="card-footer">
+                  <a
+                    href="https://westernaustraliaguide.com/5-things-to-do-in-ledge-point/"
+                    target="_blank"
+                    class="btn"
+                    >Learn More</a
+                  >
+                </div>
+              </div>
+            </div>
           </div>
         </section>
       </main>
