Embedded google maps made responsive

--- a/index.html
+++ b/index.html
@@ -56,11 +56,15 @@
           <h2 class="text-center">My favourite places in Perth are!</h2>
           <div class="grid grid-3-columns">
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-column-header">
                 <img
                   src="images/Rottnest-island.jpeg"
                   alt="Picture of Rottnest Island"
                 />
+                <iframe
+                  src="https://www.google.com/maps/d/embed?mid=1avfT1xYjVsLktLOS3XcX5UfdQuQ&hl=en&ehbc=2E312F"
+                  class="embed"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Rottnest Island/Wadjemup</h4>
@@ -92,11 +96,19 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-column-header">
                 <img
                   src="images/Swan-valley.jpg"
                   alt="Picture of Swan Valley"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27117.5928531952!2d115.98571819323635!3d-31.833186201086583!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2a32b6519c411d8b%3A0x1f1b2e7a576dab2f!2sSwan%20Valley!5e0!3m2!1sen!2sau!4v1686037070694!5m2!1sen!2sau"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                  class="embed"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Swan Valley</h4>
@@ -138,11 +150,19 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-column-header">
                 <img
                   src="images/Ledge-point.jpg"
                   alt="Picture of Ledge Point"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54661.398235548346!2d115.38731645000001!3d-31.1003534!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2bd263fccc1e5e81%3A0x400f6382479e490!2sLedge%20Point%20WA%206043!5e0!3m2!1sen!2sau!4v1686037216224!5m2!1sen!2sau"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                  class="embed"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Ledge Point</h4>
