Image gallery added

--- a/index.html
+++ b/index.html
@@ -200,6 +200,42 @@
             </div>
           </div>
         </section>
+        <section>
+          <h3 class="text-center">Gallery</h3>
+          <h2 class="text-center">Photos around Perth</h2>
+          <div class="gallery grid grid-3-columns">
+            <img
+              src="images/quokka.jpg"
+              class="gallery"
+              alt="Picture of quokka"
+            />
+            <img
+              src="images/rottnest-arial.jpg"
+              class="gallery"
+              alt="Arial shot of Rottnest"
+            />
+            <img
+              src="images/wines.jpg"
+              class="gallery"
+              alt="Wines of Swan Valley"
+            />
+            <img
+              src="images/swan-river.jpg"
+              class="gallery"
+              alt="Swan River in Swan Valley"
+            />
+            <img
+              src="images/Ledge-point-sunset.jpg"
+              class="gallery"
+              alt="Sunset at Ledge Point"
+            />
+            <img
+              src="images/ledge-point-beach.jpg"
+              class="gallery"
+              alt="Ledge Point Beach"
+            />
+          </div>
+        </section>
       </main>
 
       <footer>
