--- a/index.html
+++ b/index.html
@@ -62,8 +62,12 @@
                   alt="Picture of Rottnest Island"
                 />
                 <iframe
-                  src="https://www.google.com/maps/d/embed?mid=1avfT1xYjVsLktLOS3XcX5UfdQuQ&hl=en&ehbc=2E312F"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54132.79230792843!2d115.50398915000001!3d-32.006999400000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2a2d5750a566b7fd%3A0x504f0b535df5020!2sRottnest%20Island%20WA%206161!5e0!3m2!1sen!2sau!4v1686040240450!5m2!1sen!2sau"
                   class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
                 ></iframe>
               </div>
               <div class="card-body">
