new photos added

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
               alt="Picture of quokka"
             />
             <img
-              src="images/rottnest-arial.jpg"
+              src="images/Rottnest-Island-Cropped.png"
               class="gallery"
               alt="Arial shot of Rottnest"
             />
@@ -224,7 +224,7 @@
               alt="Wines of Swan Valley"
             />
             <img
-              src="images/swan-river.jpg"
+              src="images/Swan-valley-cropped.png"
               class="gallery"
               alt="Swan River in Swan Valley"
             />
