--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="card">
               <div class="card-header grid grid-2-column-header">
                 <img
-                  src="images/Rottnest-island.jpeg"
+                  src="images/Rottnest-island.png"
                   alt="Picture of Rottnest Island"
                 />
                 <iframe
@@ -102,7 +102,7 @@
             <div class="card">
               <div class="card-header grid grid-2-column-header">
                 <img
-                  src="images/Swan-valley.jpg"
+                  src="images/Swan-valley.png"
                   alt="Picture of Swan Valley"
                 />
                 <iframe
@@ -156,7 +156,7 @@
             <div class="card">
               <div class="card-header grid grid-2-column-header">
                 <img
-                  src="images/Ledge-point.jpg"
+                  src="images/Ledge-point.png"
                   alt="Picture of Ledge Point"
                 />
                 <iframe
