Embedded videos and Added table of Restaurants

--- a/index.html
+++ b/index.html
@@ -213,6 +213,14 @@
               class="gallery"
               alt="Picture of quokka"
             />
+            <iframe
+              class="embed"
+              src="https://www.youtube.com/embed/eclPvG5kEp0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
             <img
               src="images/Rottnest-Island-Cropped.png"
               class="gallery"
@@ -223,6 +231,14 @@
               class="gallery"
               alt="Wines of Swan Valley"
             />
+            <iframe
+              class="embed"
+              src="https://www.youtube.com/embed/LSpEFLKuBOw"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
             <img
               src="images/Swan-valley-cropped.png"
               class="gallery"
@@ -233,11 +249,66 @@
               class="gallery"
               alt="Sunset at Ledge Point"
             />
+            <iframe
+              class="embed"
+              src="https://www.youtube.com/embed/bDq4aUYU5s8"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
             <img
               src="images/ledge-point-beach.jpg"
               class="gallery"
               alt="Ledge Point Beach"
             />
+          </div>
+        </section>
+        <section class="second">
+          <h3 class="text-center">Fun Facts</h3>
+          <h2 class="text-center">Some More Information for you</h2>
+          <div class="table-container">
+            <table>
+              <thead>
+                <tr>
+                  <th>Cafe</th>
+                  <th>Suburb</th>
+                  <th>Food Type</th>
+                  <th>Open Days</th>
+                  <th>Open Hours</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Amarettos</td>
+                  <td>Ellenbrook</td>
+                  <td>Italian</td>
+                  <td>Mon to Sun</td>
+                  <td>11am till 11pm</td>
+                </tr>
+                <tr>
+                  <td>Valley Social</td>
+                  <td>Henley Brook</td>
+                  <td>Mediteranean</td>
+                  <td>Mon to Sun</td>
+                  <td>11am till 11pm</td>
+                </tr>
+                <tr>
+                  <td>Padbury's Cafe</td>
+                  <td>Guildford</td>
+                  <td>Modern Australian</td>
+                  <td>Mon to Sun</td>
+                  <td>7am till 2:30pm</td>
+                </tr>
+                <tr>
+                  <td>Sandalford Winery</td>
+                  <td>Caversham</td>
+                  <td>Modern Australian</td>
+                  <td>Mon to Sun</td>
+                  <td>11:30am till 5pm</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </section>
       </main>
