Updated headings in section

--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
           </div>
         </section>
         <section class="second">
-          <h3 class="text-center">Fun Facts</h3>
-          <h2 class="text-center">Some More Information for you</h2>
+          <h3 class="text-center">Places to Eat</h3>
+          <h2 class="text-center">Some Exciting Resaurants for you!</h2>
           <div class="table-container">
             <table>
               <thead>
